Primera subida proyecto Ionic de pruebas

--- a/src/app/pages/camera/camera.page.html
+++ b/src/app/pages/camera/camera.page.html
@@ -13,5 +13,5 @@
       Galería
       <ion-icon slot="start" name="image"></ion-icon>      
     </ion-button>
-    <ion-img src="https://i.pinimg.com/originals/40/c5/3f/40c53ff5a0da610aa4daff660c962961.png"></ion-img>
+    <ion-img [src]="image"></ion-img>
   </ion-content>
